--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
     width: 100%;
-    margin: 30px;
-    background-color: rgb(250, 250, 250);
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    background-color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
  }
   
  #profile-container{
-    margin: auto;
     margin-top: 50px;
     max-width: 300px;
     background-color: white;
