--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
  }
   
  #profile-container{
-    margin-top: 50px;
     max-width: 300px;
+    margin: 80px auto;
     background-color: white;
     border: 1px solid gray;
     border-radius: 6px;
